[project]
name = "mas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "dotenv>=0.9.9",
    "mypy>=1.16.1",
    "openai[aiohttp]>=1.93.2",
    "pydantic>=2.11.7",
    "termcolor>=3.1.0",
    "uuid>=1.30",
]
